2007-10-13  Nikolaus Schaller <hns@computer.org>
	* improved HTML parsing (handle multiple <body> tags, add <tbody> if not present etc.)
	* fixed several bugs

2007-09-01  Nikolaus Schaller <hns@computer.org> and Riccardo Mottola <riccardo@kaffe.org>
	* AlpenSTEP workshop
	* fixed several bugs

2007-08-??  Nikolaus Schaller <hns@computer.org>
	* added some support for <li>
	* fixed several bugs

2007-07-??  Nikolaus Schaller <hns@computer.org>
	* browser renamed to SWK Browser

2007-06-13  Nikolaus Schaller <hns@computer.org>
	* updated NSXMLParser to do incremental parsing
	* added a DOM Tree Browser to GNUstepWeb

2007-05-15  Richard Frith-Macdonald <rfm@gnu.org>
	* Sources/GNUmakefile: add WebKitIMG.png resource

2007-04-01  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/GNUmakefile: fixed makefile

2007-04-22  Nikolaus Schaller <hns@computer.org>
	* updated everything from mySTEP

2007-03-29  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/ECMA*.[h,m]: added ECMAScript

2007-03-29  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/*.[h,m]: corrected licenses
	
2007-03-26  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/DOMCore.m,
	Sources/WebXMLDocumentRepresentation.h,
	Sources/WebXMLDocumentRepresentation.m,
	Sources/WebHTMLDocumentView.h,
	Sources/WebHTMLDocumentView.m,
	Sources/WebImageDocumentRepresentation.h,
	Sources/DOMHTML.h,
	Sources/DOMHTML.m,
	Sources/WebDOMOperations.h,
	Sources/WebFrameLoadDelegate.h: updated from myStep

2007-03-21  Riccardo Mottola <riccardo@kaffe.org>
	* DOMRange.*, DOMCSS.h, GNUMakefile:
	added files from myStep

2007-03-21  Riccardo Mottola <riccardo@kaffe.org>
	* WebArchive.*, WebDownload.h, GNUMakefile:
	added files from myStep
	
2007-03-20  Riccardo Mottola <riccardo@kaffe.org>

	* Sources/WebDocumentRepresentation.h,
	Sources/WebDocumentRepresentation.m,
	Sources/WebCSSDocumentRepresentation.h,
	Sources/WebCSSDocumentRepresentation.m:
	added from myStep

2007-03-13  Rrichard Frith-Macdonald <fm@gnu.org>
