@@ -1,3 +1,6 @@
+2007-11-20  Riccardo Mottola <riccardo@kaffe.org>
+	* Sources/GNUmakefile: added WebPreferences
+	
 2007-10-13  Nikolaus Schaller <hns@computer.org>
 	* improved HTML parsing (handle multiple <body> tags, add <tbody> if not present etc.)
 	* fixed several bugs
